New white and black theme

--- a/.config/hypr/themes/neon-pink/neon-pink-hyprlock.conf
+++ b/.config/hypr/themes/neon-pink/neon-pink-hyprlock.conf
@@ -1,4 +1,3 @@
-
 # A barebones hyprlock.conf with unnecessary stuff commented out.
 # This file defines how your Hyprland lock screen will look and behave.
 
@@ -21,7 +20,7 @@ general {
 # Defines the background of the lock screen.
 background {
     monitor =                # Which monitor to apply the background to. Leave empty for all.
-   path = ~/Pictures/Wallpapers/minimal-triangle.png        # Use 'screenshot' to blur your current desktop, or specify a '/path/to/image.png'.
+    path = ~/Pictures/Wallpapers/pink-wallpaper.png        # Use 'screenshot' to blur your current desktop, or specify a '/path/to/image.png'.
     blur_passes = 3          # Number of blur passes. Higher means more blur, but uses more CPU.
     # blur_size = 7            # Size of the blur kernel.
     # noise = 0           # Add noise to the background.
@@ -46,11 +45,11 @@ input-field {
 
     # Style
     rounding = -1            # Corner rounding for the input field. -1 for full rounding (pill shape).
-    outline_thickness = 2    # Thickness of the outline border.
-    inner_color = rgba(3333337f) # Color of the input field's background.
-    outer_color = rgba(009cffff) rgba(7e00ffff) 45deg # Color of the input field's outline.
-    font_color = rgb(ffffff) # Color of the input text/dots.
-    capslock_color = rgba(fff000ff) rgba(ffb500ff) 45deg
+    outline_thickness = 0    # Thickness of the outline border.
+    inner_color = rgba(1f1c1e7f) # Color of the input field's background.
+    outer_color = rgb(888888) # Color of the input field's outline.
+    font_color = rgb(523c4b) # Color of the input text/dots.
+    capslock_color = rgb(302b2f)
     fade_on_empty = false
 
     # Text & Placeholder
@@ -62,7 +61,7 @@ input-field {
     dots_center = true       # Center the password dots.
 
     # Status Indicators
-    check_color = rgba(7e00ffff) rgba(009cffff)  45deg # Color when password check is in progress.
+    check_color = rgb(ff00aa) # Color when password check is in progress.
     fail_color = rgb(ff3333)  # Color when password is incorrect.
     # fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i> # Text displayed on failure. $FAIL is 'Auth Fail', $ATTEMPTS is count.
     # fail_transition = 300    # Duration for the fail color transition.
@@ -87,7 +86,7 @@ label {
 # Another optional label for a greeting
 label {
     monitor =
-    text = <span foreground="##ffffff">Hi</span> <span foreground="##999999"><i>$USER</i></span><span foreground="##ffffff"> :)</span>
+    text = <span foreground="##ffffff">Hi</span> <span foreground="##f51dc3"><i>$USER</i></span><span foreground="##ffffff"> :)</span>
     color = rgba(ffffffff)
     font_size = 32
     font_family = Maple Mono
