--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -1,17 +1,20 @@
+
 // ~/.config/fastfetch/config.jsonc
 // See https://github.com/fastfetch-cli/fastfetch/wiki/Configuration for more details
 // See *.jsonc in https://github.com/fastfetch-cli/fastfetch/tree/dev/presets/examples for more examples
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
-    "source": "~/.config/fastfetch/arch",
-    "color": {
-      "1": "cyan"
-    },
-    "type": "file",
+    "type": "raw",
+    "source": "~/.config/fastfetch/image.bin",
+    "position": "left",
+    "height": 20,
     "padding": {
-      "top": 3
-    }
+        "top": 2,
+        "bottom": 0,
+        "left": 0,
+        "right": 3,
+    },
   },
   "display": {
     "separator": "    "
