--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -35,7 +35,7 @@ monitor= DP-3, 1920x1080@240, -1080x-450, 1, transform, 1
 $terminal = kitty
 $fileManager = thunar
 $browser = firefox
-$menu = wofi --show drun
+$menu = rofi -show drun
 
 
 #################
@@ -47,6 +47,9 @@ $menu = wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
+
+
+exec-once = hyprlock
 exec-once = waybar & hyprpaper
 
 #for libadwaita gtk4 apps you can use this command:
@@ -95,50 +98,28 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hypr.land/Configuring/Variables/#general
 general {
-    gaps_in = 18
-    gaps_out = 30
 
-    border_size = 2
-
-    # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(3A94C5FF) rgba(8DA101FF) 45deg
-    col.inactive_border = rgba(272E33FF)
-
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false
-
-    # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
-
-    layout = dwindle
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#decoration
 decoration {
-    rounding = 25
-    rounding_power = 1
-
-    # Change transparency of focused and unfocused windows
-    active_opacity = .95
-    inactive_opacity = .90
-
     shadow {
-        enabled = true
-        range = 10
-        render_power = 3
-        color = rgba(1a1a1aee)
     }
 
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
-        enabled = true
-        size = 2
-        passes = 2
-        brightness = 1
-        contrast = 1
-
-        vibrancy = 0.5
     }
+}
+
+
+misc {
+}
+
+source = ~/.config/hypr/themes/white-black/white-black-hyprland.conf
+
+xwayland {
+        enabled = true
+        force_zero_scaling = true
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#animations
@@ -193,10 +174,6 @@ master {
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#misc
-misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
-}
 
 
 #############
@@ -252,11 +229,17 @@ bind = $mainMod, X, togglesplit, # dwindle
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, F, fullscreen
 
-# Move focus with mainMod + arrow keys
+# Move focus with mainMod + vim-motion
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
+
+# Resize with mainMod + CTRL + arrowkeys
+bind = $mainMode CTRL, right, resizeactive, 30 0
+bind = $mainMode CTRL, left, resizeactive, -30 0
+bind = $mainMode CTRL, up, resizeactive, 0 -30
+bind = $mainMode CTRL, down, resizeactive, 0 30
 
 # Workspace to Monitor Assignments
 
