--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,269 +1,179 @@
-/***
- *    ┓ ┏┏┓┓┏┳┓┏┓┳┓  ┳┓┳┳┳┓┳┓┓ ┏┓┏┓  ┏┓┏┓┳┓┏┓┳┏┓
- *    ┃┃┃┣┫┗┫┣┫┣┫┣┫━━┣┫┃┃┣┫┣┫┃ ┣ ┗┓━━┃ ┃┃┃┃┣ ┃┃┓
- *    ┗┻┛┛┗┗┛┻┛┛┗┛┗  ┻┛┗┛┻┛┻┛┗┛┗┛┗┛  ┗┛┗┛┛┗┻ ┻┗┛
- *                                              
- */
+// -*- mode: jsonc -*-
+{
+    // "layer": "top", // Waybar at top layer
+    // "position": "bottom", // Waybar position (top|bottom|left|right)
+    "height": 30, // Waybar height (to be removed for auto height)
+    // "width": 1280, // Waybar width
+    "spacing": 4, // Gaps between modules (4px)
+    // Choose the order of the modules
+    "modules-left": [
+        "custom/archlogo",
+        "custom/separator1",
+        "clock",
+        "custom/separator2",
+        "cpu",
+        "memory",
+        "temperature",
+    ],
+    "modules-center": [
+        "sway/window",
+        "hyprland/workspaces"
+    ],
+    "modules-right": [
+        "mpris",
+        "pulseaudio",
+        "custom/separator3",
+        "network",
+        "backlight",
+        "battery",
+        "custom/separator4",
+        "custom/power"
+    ],
 
- 
- {
+    "hyprland/workspaces": {
+        "format": "{icon}",
+        "on-click": "activate",
+        "format-icons": {
+            "active": "",
+            "default": "",
+            "empty": "",
+        },
 
-	/*----------Global Properties-------------*/
-	"layer": "top",
-	"position": "top",
-	"spacing": 0,
-	"height": 35,
-	"margin-top": 0,
-	"margin-right": 0,
-	"margin-bottom": 0,
-	"margin-left": 0,
-	/*----------Modules Left----------------*/
-	"modules-left": [
-		"custom/launcher",
-		"group/utility",
-		"custom/playerctl#backward",
-		"custom/playerctl#play",
-		"custom/playerctl#foward",
-		"custom/playerlabel"
-	],
-	/*----------Modules Center--------------*/
-	"modules-center": [
-		"custom/weather",
-		"hyprland/workspaces",
-		"custom/swaync"
-	],
-	/*----------Modules Center--------------*/
-	"modules-right": [
-		"tray",
-		"battery",
-		"pulseaudio",
-		"network",
-		"clock"
-	],
+        "persistent-workspaces": {
+            "*": 5,
+        },
+    },
 
-	/*----------Hyprland Workspace----------*/
-	"hyprland/workspaces": {
-		"format": "{name}",
-		"on-click": "activate",
-		"on-scroll-down": "hyprctl dispatch workspace e+1",
-		"on-scroll-up": "hyprctl dispatch workspace e-1"
-	},
+    "mpris": {
+        "format": "{player_icon} {title} - {artist}",
+        "format-paused": "{status_icon} <i>{title} - {artist}</i>",
+        "player-icons": {
+            "default": "▶",
+            "mpv": "󰝚"
+        },
+        "status-icons": {
+            "paused": "⏸"
+        },
 
-	/*-----------Weather---------------*/
-	"custom/weather": {
-		"format": "{}",
-		"format-alt": "{alt}: {}",
-		"format-alt-click": "click",
-		"interval": 3600,
-		"return-type": "json",
-		"exec": "$HOME/.config/waybar/scripts/Weather.py",
-	    	//"exec": "$HOME/.config/hypr/UserScripts/Weather.sh",
-	    	//"exec-if": "ping wttr.in -c1",
-	    	"tooltip": true
-	},
-	/*-----------SwayNC----------------*/
+        "min-length": 5,
+        "max-length": 20,
+    },
 
-	"custom/swaync": {
-		"tooltip": true,
-		"tooltip-format": "Left Click: Launch Notification Center\nRight Click: Do not Disturb",
-		"format": "{} {icon} ",
-		"format-icons": {
-			"notification": "<span foreground='#e67e80'><sup></sup></span>",
-			"none": "",
-			"dnd-notification": "<span foreground='#e67e80'><sup></sup></span>",
-			"dnd-none": "",
-			"inhibited-notification": "<span foreground='#e67e80'><sup></sup></span>",
-			"inhibited-none": "",
-			"dnd-inhibited-notification": "<span foreground='#e67e80'><sup></sup></span>",
-			"dnd-inhibited-none": ""
-		},
-		"return-type": "json",
-		"exec-if": "which swaync-client",
-		"exec": "swaync-client -swb",
-		"on-click": "sleep 0.1 && swaync-client -t -sw",
-		"on-click-right": "swaync-client -d -sw",
-		"escape": true
-	},
+    "clock": {
+        "interval": 60,
+        "format": "{:%I:%M %p}",
+        "format-alt": "{:%d-%m-%Y}",
+        "timezone": "America/Chicago",
+        "max-length": 25
+    },
 
+    "cpu": {
+        "format": "{usage}% ",
+        "tooltip": true
+    },
 
-	/*---------------Launcher-------------*/
-	"custom/launcher": {
-		"format": "󰣇",
-		"tooltip": false,
-		"on-click": "~/.config/rofi/scripts/sidelauncher"
-	},
+    "memory": {
+        "format": "{}% ",
+        "tooltip": true
+    },
 
-	/*--------------Pacman--------------------*/
-	"custom/pacman": {
-		"format": "󰅢{}",
-		"interval": 30,   
-		"exec": "checkupdates | wc -l",
-		"exec-if": "exit 0",
-		// "on-click": "kitty --title=PacUpdate -e 'sleep 0.1; paru -Syu; echo Done - Press enter to exit; read'; pkill -SIGRTMIN+8 waybar",
-		"signal": 8,
-		"tooltip": false
-	},
+    "temperature": {
+        "thermal-zone": 1,
+        "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
+        "critical-threshold": 80,
+        // "format-critical": "{temperatureC}°C {icon}",
+        "format": "{temperatureC}°C {icon}",
+        "format-icons": ["", "", ""]
+    },
 
-	/*-----------Cpu, Memory, Colorpicker, Temperature, Idle-inhibitor------*/
-	"cpu": {
-		"format": "󰻠",
-		"tooltip": true
-	},
-	"memory": {
-		"format": ""
-	},
-	"temperature": {
-		"critical-threshold": 80,
-		"format": ""
-	},
-	"custom/colorpicker": {
-		"format": "{}",
-		"return-type": "json",
-		"interval": "once",
-		"exec": "~/.config/waybar/scripts/Colorpicker.sh -j",
-		"on-click": "~/.config/waybar/scripts/Colorpicker.sh",
-		"signal": 1
-	},
+    "backlight": {
+        // "device": "acpi_video1",
+        "format": "{percent}% {icon}",
+        "format-icons": ["", "", "", "", "", "", "", "", ""]
+    },
 
-	"idle_inhibitor": {
-		"format": "{icon}",
-		"format-icons": {
-			"activated": "",
-			"deactivated": ""
-		}
-	},
+    "battery": {
+        "states": {
+            "warning": 20,
+            "critical": 10
+        },
 
-	/*----------------Expand---------------*/
-	"custom/expand": {
-		"format": "",
-		"tooltip": true,
-		"tooltip-format": "Click to show utilities"
-	},
+        "format": "{icon} {capacity}%",
+        "format-icons": ["󰂎", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"],
+        "format-charging": " {capacity}%",
 
-	/*-----------Group-------------------*/
-	"group/utility": {
-		"orientation": "inherit",
-		"drawer": {
-			"transition-duration": 600,
-			"children-class": "child-utility",
-			"transition-left-to-right": true,
-			"click-to-reveal": true
-		},
-		"modules": [
-			"custom/expand",
-			"cpu",
-			"memory",
-			"temperature",
-			"custom/pacman",
-			"idle_inhibitor",
-			"custom/colorpicker"
-		]
-	},
+        "tooltip-format": "Discharging: {time}",
+        "tooltip-format-charging": "Charging: {time}",
+        "interval": 1,
+        "min-length": 6,
+        "max-length": 6
+    },
+        
 
-	/*---------------Playerctl---------------*/
-	"custom/playerctl#backward": {
-		"format": "󰙣 ",
-		"on-click": "playerctl previous",
-		"on-scroll-down": "wpctl set-volume @DEFAULT_SINK@ 5%-",
-		"on-scroll-up": "wpctl set-volume @DEFAULT_SINK@ 5%+",
-		"tooltip": false
-	},
-	"custom/playerctl#foward": {
-		"format": "󰙡 ",
-		"on-click": "playerctl next",
-		"on-scroll-down": "wpctl set-volume @DEFAULT_SINK@ 5%-",
-		"on-scroll-up": "wpctl set-volume @DEFAULT_SINK@ 5%+",
-		"tooltip": false
-	},
-	"custom/playerctl#play": {
-		"exec": "playerctl -a metadata --format '{\"text\": \"{{artist}} - {{markup_escape(title)}}\", \"tooltip\": \"{{playerName}} : {{markup_escape(title)}}\", \"alt\": \"{{status}}\", \"class\": \"{{status}}\"}' -F",
-		"format": "{icon}",
-		"format-icons": {
-			"Paused": "<span> </span>",
-			"Playing": "<span>󰏥 </span>",
-			"Stopped": "<span> </span>"
-		},
-		"on-click": "playerctl play-pause",
-		"on-scroll-down": "wpctl set-volume @DEFAULT_SINK@ 5%-",
-		"on-scroll-up": "wpctl set-volume @DEFAULT_SINK@ 5%+",
-		"return-type": "json"
-	},
-	"custom/playerlabel": {
-		"exec": "playerctl -a metadata --format '{\"text\": \"{{artist}} - {{markup_escape(title)}}\", \"tooltip\": \"{{playerName}} : {{markup_escape(title)}}\", \"alt\": \"{{status}}\", \"class\": \"{{status}}\"}' -F",
-		"format": "<span>󰎈 {} 󰎈</span>",
-		"max-length": 40,
-		"on-click": "",
-		"return-type": "json"
-	},
-	/*---------------Battery-------------*/
+    "network": {
+        // "interface": "wlp2*", // (Optional) To force the use of this interface
+        "format-wifi": "{signalStrength}% ",
+        "format-ethernet": "100% 󰈀",
+        "tooltip-format": "{ifname} via {gwaddr} ",
+        "format-linked": "{ifname} (No IP) ",
+        "format-disconnected": "Disconnected ⚠",
+        "format-alt": "{ifname}: {ipaddr}/{cidr}"
+    },
+    "pulseaudio": {
+        // "scroll-step": 1, // %, can be a float
+        "format": "{volume}% {icon} {format_source}",
+        "format-bluetooth": "{volume}% {icon} {format_source}",
+        "format-bluetooth-muted": " {icon} {format_source}",
+        "format-muted": " {format_source}",
+        "format-source": " {volume}% ",
+        "format-source-muted": " ",
+        "format-icons": {
+            "headphone": "",
+            "hands-free": "",
+            "headset": "",
+            "phone": "",
+            "portable": "",
+            "car": "",
+            "default": ["", "", ""]
+        },
+        "on-click": "pavucontrol"
+    },
 
-	"battery": {
-		"format": "{icon}  {capacity}%",
-		"format-alt": "{icon} {time}",
-		"format-charging": " {capacity}%",
-		"format-icons": [
-			"",
-			"",
-			"",
-			"",
-			""
-		],
-		"format-plugged": " {capacity}% ",
-		"format-time": "{H} h {m} min",
-		"states": {
-			"critical": 15,
-			"good": 95,
-			"warning": 30
-		},
-		"on-scroll-up": "~/.config/hypr/scripts/backlight.sh --inc",
-		"on-scroll-down": "~/.config/hypr/scripts/backlight.sh --dec"
-	},
+    "custom/power": {
+        "format": " ",
+        "tooltip": false,
+        // "tooltip-format": "Power Menu",
+        "on-click": "~/.config/waybar/public-themes/minimal-statusline/scripts/power-menu.sh"
+    },
 
-	/*---------------Pulseaudio------------*/
-	"pulseaudio": {
-		"format": "{icon} {volume}%",
-		"format-icons": {
-			"default": [
-				"󰕿",
-				"󰖀",
-				"󰕾"
-			]
-		},
-		"format-muted": "󰝟",
-		"on-click": "pavucontrol",
-		"scroll-step": 5
-	},
+    "custom/archlogo": {
+        "format": "󰣇",
+        "tooltip": false
+    },
 
-	/*--------------Network-----------------*/
-	"network": {
-		"format-disconnected": "󰖪 0% ",
-		"format-ethernet": "󰈀 100% ",
-		"format-linked": "{ifname} (No IP)",
-		"format-wifi": "  {signalStrength}%",
-		"tooltip-format": "Connected to {essid} {ifname} via {gwaddr}",
-		// "on-click": "kitty --title=TermNmtui -e 'sleep 0.1; nmtui'"
-	},
+    "custom/separator1": {
+        "format": "|",
+        "tooltip": false
+    },
 
-	/*------------Tray--------------------*/
-	"tray": {
-		"icon-size": 20,
-		"spacing": 10
-	},
+    "custom/separator2": {
+        "format": "|",
+        "tooltip": false
+    },
 
-	/*------------Clock------------------*/
-	"clock": {
-		"format": "󰥔 {:%I:%M:%S %p} ",
-		"interval": 1,   
-		"tooltip-format": "<tt>{calendar}</tt>",
-		"calendar": {
-			"format": {
-				"today": "<span color='#d699b6'><b>{}</b></span>"
-			}
-		},
-		"actions": {
-			"on-click-right": "shift_down",
-			"on-click": "shift_up"
-		}
-	}
+    "custom/separator3": {
+        "format": "|",
+        "tooltip": false
+    },
 
- }
+    "custom/separator4": {
+        "format": "|",
+        "tooltip": false
+    },
+
+    "custom/separator5": {
+        "format": "|",
+        "tooltip": false
+    },
+    
+}
