new themes added

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -54,7 +54,7 @@ input-field {
     fade_on_empty = false
 
     # Text & Placeholder
-    font_family = Maple Mono
+    font_family = 0xProto
     placeholder_text = <i><span foreground="##a9b6c6">Input Password</span></i> # Text shown when empty. Supports Pango markup.
     # hide_input = false       # Set to true to hide the actual password input (show dots). Recommended true for security.
     # dots_size = 0.33         # Size of the password dots.
@@ -76,7 +76,7 @@ label {
     text = $TIME # Example: Show current time, updates every 1000ms.
     color = rgba(ffffffff)   # Text color (RGBA).
     font_size = 64           # Font size.
-    font_family = Maple Mono # Font family.
+    font_family = 0xProto # Font family.
     position = 0, 30%       # X, Y position relative to the center of the monitor.
     halign = center          # Horizontal alignment.
     valign = center          # Vertical alignment.
@@ -90,7 +90,7 @@ label {
     text = <span foreground="##ffffff">Hi</span> <span foreground="##999999"><i>$USER</i></span><span foreground="##ffffff"> :)</span>
     color = rgba(ffffffff)
     font_size = 32
-    font_family = Maple Mono
+    font_family = 0xProto
     position = 0, 10%
     halign = center
     valign = center
