--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -34,7 +34,7 @@ monitor= DP-3, 1920x1080@240, -1080x-450, 1, transform, 1
 # Set programs that you use
 $terminal = kitty
 $fileManager = thunar
-$browser = firefox
+$browser = firefox-developer-edition
 $menu = rofi -show drun
 
 
