Switched from hellwal to pywal

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,7 +2,7 @@
 
 # BEGIN_KITTY_THEME
 # Base2Tone Mall Dark
-include ~/.config/hellwal/generated/kitty-colors.conf
+include ~/.cache/wal/colors-kitty.conf
 # END_KITTY_THEME
 
 #: Fonts {{{
@@ -11,7 +11,7 @@ include ~/.config/hellwal/generated/kitty-colors.conf
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family        family="TT Norms Pro Mono"
+font_family        family="Maple Mono"
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
