--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -4,19 +4,19 @@
 	<alias>
 		<family>sans-serif</family>
 		<prefer>
-			<family>Google Sans Code</family>
+			<family>Maple Mono</family>
 		</prefer>
 	</alias>
 	<alias>
 		<family>serif</family>
 		<prefer>
-			<family>Google Sans Code</family>
+			<family>Maple Mono</family>
 		</prefer>
 	</alias>
 	<alias>
 		<family>monospace</family>
 		<prefer>
-			<family>TT Norms Pro Mono</family>
+			<family>Maple Mono</family>
 		</prefer>
 	</alias>
 </fontconfig>
