--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -48,11 +48,11 @@
         "format": "{player_icon} {title} - {artist}",
         "format-paused": "{status_icon} <i>{title} - {artist}</i>",
         "player-icons": {
-            "default": "▶",
+            "default": " ",
             "mpv": "󰝚"
         },
         "status-icons": {
-            "paused": "⏸"
+            "paused": "󱖐 "
         },
 
         "min-length": 5,
