--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -4,19 +4,19 @@
 	<alias>
 		<family>sans-serif</family>
 		<prefer>
-			<family>Miracode</family>
+			<family>Monaspace Neon NF Medium</family>
 		</prefer>
 	</alias>
 	<alias>
 		<family>serif</family>
 		<prefer>
-			<family>Miracode</family>
+			<family>Monaspace Neon NF Medium</family>
 		</prefer>
 	</alias>
 	<alias>
 		<family>monospace</family>
 		<prefer>
-			<family>Miracode</family>
+			<family>Monaspace Neon NF Medium</family>
 		</prefer>
 	</alias>
 </fontconfig>
