--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -11,7 +11,7 @@ include ~/.cache/wal/colors-kitty.conf
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family        family="Miracode"
+font_family        family="Monaspace Neon NF Medium"
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -25,7 +25,7 @@ font_family        family="Miracode"
 #: <https://sw.kovidgoyal.net/kitty/kittens/choose-fonts/#font-spec-
 #: syntax>.
 
-font_size 14
+font_size 16
 
 #: Font size (in pts).
 
