--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -11,7 +11,7 @@ include ~/.cache/wal/colors-kitty.conf
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family        family="Monaspace Neon NF Medium"
+font_family        family="Annotation Mono"
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
