added screenshot tool

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -4,19 +4,19 @@
 	<alias>
 		<family>sans-serif</family>
 		<prefer>
-            <family>Annotation Mono</family>
+            <family>Comic Mono</family>
 		</prefer>
 	</alias>
 	<alias>
 		<family>serif</family>
 		<prefer>
-			<family>Annotation Mono</family>
+			<family>Comic Mono</family>
 		</prefer>
 	</alias>
 	<alias>
 		<family>monospace</family>
 		<prefer>
-			<family>Annotation Mono</family>
+			<family>Comic Mono</family>
 		</prefer>
 	</alias>
 </fontconfig>
