--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -200,7 +200,6 @@ input {
 
 # https://wiki.hypr.land/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
 }
 
 # Example per-device config
@@ -225,11 +224,15 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, O, pseudo, # dwindle
 bind = $mainMod, X, togglesplit, # dwindle
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, F, fullscreen
 
+# Take screenshots
+bind = $mainMod, P, exec, grimblast save screen ~/Pictures/Screenshots/$(date +%Y%m%d%H%M%S).png
+bind = $mainMod SHIFT, P, exec, grimblast copy area
+bind = $mainMod CTRL, P, exec, grimblast copy active
 
 # Move focus with mainMod + vim-motion
 bind = $mainMod, H, movefocus, l
